--- a/TextFields/TextFields/Base.lproj/Main.storyboard
+++ b/TextFields/TextFields/Base.lproj/Main.storyboard
@@ -36,7 +36,6 @@
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="x8x-lW-EqZ">
                                 <rect key="frame" x="16" y="104" width="218" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="218" id="Q29-7Z-fUr"/>
                                     <constraint firstAttribute="height" constant="30" id="cZ4-Ff-5vX"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
@@ -54,12 +53,13 @@
                             <constraint firstItem="b5d-35-VHU" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="21H-QM-esp"/>
                             <constraint firstItem="b5d-35-VHU" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="8" id="CDF-pd-P9F"/>
                             <constraint firstItem="zKk-mk-oHd" firstAttribute="top" secondItem="FND-fQ-FKU" secondAttribute="bottom" constant="8" id="EY7-7b-biL"/>
-                            <constraint firstItem="zKk-mk-oHd" firstAttribute="leading" secondItem="x8x-lW-EqZ" secondAttribute="trailing" constant="21" id="KsF-BX-5hB"/>
+                            <constraint firstItem="zKk-mk-oHd" firstAttribute="leading" secondItem="x8x-lW-EqZ" secondAttribute="trailing" constant="21" id="GDM-Hj-TpR"/>
                             <constraint firstItem="FND-fQ-FKU" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="MX8-Wf-RzC"/>
                             <constraint firstItem="b5d-35-VHU" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailingMargin" id="Zte-LW-xA1"/>
                             <constraint firstItem="x8x-lW-EqZ" firstAttribute="top" secondItem="FND-fQ-FKU" secondAttribute="bottom" constant="8" id="a5T-bo-Ks8"/>
                             <constraint firstItem="FND-fQ-FKU" firstAttribute="top" secondItem="b5d-35-VHU" secondAttribute="bottom" constant="8" id="juk-Pm-vD8"/>
                             <constraint firstItem="x8x-lW-EqZ" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="k04-Jr-pgf"/>
+                            <constraint firstItem="zKk-mk-oHd" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailingMargin" id="lYv-Km-xEh"/>
                             <constraint firstItem="FND-fQ-FKU" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailingMargin" id="oAk-yx-rSh"/>
                         </constraints>
                     </view>
